--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
 dwv-react/node_modules
+backend/venv
+backend/models/__pycache__
+backend/resources/__pycache__
+backend/schemas/__pycache__
+backend/utilities/__pycache__
+backend/__pycache__
